--- a/Project_NTT_data/appsettings.json
+++ b/Project_NTT_data/appsettings.json
@@ -1,6 +1,9 @@
 {
   "ConnectionStrings": {
-    "conn": "Data Source=94.73.145.8;Initial Catalog=u0430956_capital;User ID=u0430956_emir;Password=WEcy77Y1WZkn74I;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "conn": "Data Source=94.73.145.8;Initial Catalog=u0430956_capital;User ID=u0430956_emir;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
+  "IPList": {
+    "WhiteList": ["127.0.0.1", "::1"]
   },
   "Logging": {
     "LogLevel": {
